# nonogram_parallel_solver

./: CMakeLists.txt  Games.txt  README.md  analise.py  compilar.sh  data.csv
src/: Cell.cpp  Cell.h  Hint.cpp  Hint.h  Line.cpp  Line.h  Nonogram.cpp  Nonogram.h  main.cpp
utils/: CombinationGenerator.cpp  LineSolver.cpp  LineSolver.h  NonogramPuzzleFactory.cpp  NonogramPuzzleFactory.h  NonogramRun.cpp  NonogramRun.h  NonogramSolver.cpp  NonogramSolver.h  ParallelLineSolver.cpp  ParallelLineSolver.h  ParallelNonogramSolver.cpp  ParallelNonogramSolver.h  RandomGenerator.cpp  RandomGenerator.h
utils/linesolvers/: BaseLineSolver.h  ParallelLineSolver.h
utils/solvers/: BaseSolver.h  NonogramSolver.cpp  NonogramSolver.h  ParallelNonogramSolver.cpp  ParallelNonogramSolver.h
utils/solvers/linesolvers/: BaseLineSolver.h  ParallelLineSolver.cpp  ParallelLineSolver.h  SequentialLineSolver.cpp  SequentialLineSolver.h
